--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -108,3 +108,4 @@ mark_fantan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/m
 mark_shuiwenpingzhang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4002.png'
 mark_global_yutian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20002.png'
 mark_global_yanre: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20003.png'
+mark_yanhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3039.png'
