--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -233,3 +233,30 @@ skill_yanzhizhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/
 skill_yanbao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_2_003.mp3'
 skill_yangyan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_003.mp3'
 skill_huoshanzhili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_003.mp3'
+skill_moya: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
+skill_yanhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
+skill_huozhiya: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_lieyanzhuangji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_yezhuzhisu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
+skill_baoya: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_huoyufeidan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_2_001.mp3'
+skill_zouhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_lieyanyachongpo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10244.mp3'
+skill_yanwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_badedetouchou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_1_001.mp3'
+skill_huoxing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
+skill_huozhong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/04_3_001.mp3'
+skill_xueruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_xuruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_guanghuapifu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+skill_talangchongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
+skill_shuimo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+skill_shuihuasijian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_wuyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+skill_xuanzhuanshuiqiang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_xuanzhuanchongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
+skill_chaoliupo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10258.mp3'
+skill_junengchongfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
+skill_jushuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_003.mp3'
+skill_nongsuoshuimo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+skill_chunjingzhixin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
