--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -109,3 +109,5 @@ mark_shuiwenpingzhang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@
 mark_global_yutian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20002.png'
 mark_global_yanre: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20003.png'
 mark_yanhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3039.png'
+mark_huoxing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3039.png'
+mark_shoufashanghaizengjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3016.png'
