--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -309,3 +309,35 @@
   apply:
     type: disableContext
     target: addMarkContext
+- id: effect_emblem_add_mark_yanhuo_duration_1
+  trigger: OnBeforeAddMark
+  priority: 1
+  apply:
+    type: setMarkDuration
+    target: addMarkContext
+    value:
+      type: dynamic
+      selector:
+        base: addMarkContext
+        chain:
+          - type: select
+            arg:
+              type: dynamic
+              arg: duration
+          - type: add
+            arg: 1
+  condition:
+    type: every
+    conditions:
+      - type: selfBeAddMark
+      - type: evaluate
+        target:
+          base: addMarkContext
+          chain:
+            - type: select
+              arg:
+                type: dynamic
+                arg: baseMark.id
+        evaluator:
+          type: same
+          value: mark_yanhuo
