--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -744,7 +744,7 @@
     - effect_mark_reduce_damage_taken_once
 - id: mark_yanhuo
   config:
-    duration: 2
+    duration: 3
     persistent: false
     maxStacks: 1
     stackable: true
@@ -756,3 +756,31 @@
     inheritOnFaint: false
   effect:
     - effect_mark_amplify_fire_skill_70
+- id: mark_huoxing
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 1
+    stackable: true
+    stackStrategy: extend
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_double_mark_yanhuo_duration
+- id: mark_shoufashanghaizengjia
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 1
+    stackable: true
+    stackStrategy: extend
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_amplify_skill_10
