--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -68,6 +68,9 @@
   effect:
     - effect_emblem_immune_mark_haipa
 - id: mark_emblem_yanhuo
+  config: *emblem_config
+  effect:
+    - effect_emblem_add_mark_yanhuo_duration_1
 - id: mark_emblem_xuruo
 - id: mark_emblem_yinji
 - id: mark_emblem_huizhi
