--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -111,3 +111,6 @@ mark_global_yanre: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 mark_yanhuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3039.png'
 mark_huoxing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3039.png'
 mark_shoufashanghaizengjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3016.png'
+mark_xueruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3042.png'
+mark_xuruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3041.png'
+mark_guanghua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3023.png'
