--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -12,7 +12,7 @@
     stackStrategy: refresh
     destroyable: true
     duration: 3
-    keepOnSwitchOut: true
+    keepOnSwitchOut: false
   effect:
     - effect_mark_stun
     - effect_mark_cant_evasion
@@ -297,7 +297,7 @@
     transferOnSwitch: false
     inheritOnFaint: false
   effect:
-    - effect_mark_reduce_damage_15
+    - effect_mark_reduce_damage_15_percent
 - id: mark_zengzhong
   config:
     duration: -1
@@ -479,13 +479,13 @@
   config:
     duration: 1
     persistent: true
-    maxStacks: 1
+    maxStacks: 5
     stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: true
   effect:
-    - effect_mark_evade
+    - effect_mark_evade_with_stack
 - id: mark_shiquweijue
 - id: mark_wulicao
   config:
@@ -631,6 +631,18 @@
 - id: mark_zaochengshanghaijianshao
 - id: mark_shoudaoshanghaizengjia
 - id: mark_suijixianzhi
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: false
+    stackStrategy: extend
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect: [] #TODO
 - id: mark_mianyiyichang
 - id: mark_xinzhiyinji
 - id: mark_xuehongyinji
@@ -784,3 +796,46 @@
     inheritOnFaint: false
   effect:
     - effect_mark_amplify_skill_10
+- id: mark_xuruoshuipao
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 2
+    stackable: true
+    stackStrategy: stack
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_reduce_damage_30_percent_xstack
+- id: mark_xueruoshuipao
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 2
+    stackable: true
+    stackStrategy: stack
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_increase_taken_damage_30_xstack
+- id: mark_guanghua
+  config:
+    duration: 2
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    isShield: false
+    keepOnSwitchOut: true
+    transferOnSwitch: false
+    inheritOnFaint: false
+  effect:
+    - effect_mark_evade
+    - effect_mark_increase_damage_taken_50
