--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -2986,3 +2986,172 @@
   effect:
     - effect_skill_ignite_foe_mark_shaoshang
   tags: []
+- id: skill_xueruoshuipao
+  element: Water
+  category: Special
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_foe_xueruoshuipao
+  tags: []
+- id: skill_xuruoshuipao
+  element: Water
+  category: Special
+  target: opponent
+  power: 65
+  accuracy: 95
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_foe_xuruoshuipao
+  tags: []
+- id: skill_guanghuapifu
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_guanghua
+  tags: []
+- id: skill_talangchongfeng
+  element: Water
+  category: Physical
+  target: opponent
+  power: 85
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_def_10_percent
+  tags: []
+- id: skill_shuimo
+  element: Water
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 100
+  rage: 10
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_spa_1_stage
+  tags: []
+- id: skill_shuihuasijian
+  element: Water
+  category: Special
+  target: opponent
+  power: 90
+  accuracy: 95
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_spa_10_percent
+  tags: []
+- id: skill_wuyi
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_suijixianzhi #TODO
+  tags: []
+- id: skill_xuanzhuanshuiqiang
+  element: Water
+  category: Special
+  target: opponent
+  power: 100
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_spa_15_percent
+  tags: []
+- id: skill_xuanzhuanchongfeng
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 100
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_def_15_percent
+  tags: []
+- id: skill_chaoliupo
+  element: Water
+  category: Climax
+  target: opponent
+  power: 165
+  accuracy: 100
+  rage: 100
+  sureHit: true
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_bizhong
+  tags: []
+- id: skill_junengchongfeng
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 120
+  accuracy: 50
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_def_20_percent
+  tags: []
+- id: skill_jushuipao
+  element: Water
+  category: Special
+  target: opponent
+  power: 110
+  accuracy: 50
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_spa_20_percent
+  tags: []
+- id: skill_nongsuoshuimo
+  element: Water
+  category: Status
+  target: opponent
+  power: 0
+  accuracy: 95
+  rage: 20
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_reduce_foe_def_1_stage
+    - effect_skill_reduce_foe_spa_1_stage
+  tags: []
+- id: skill_chunjingzhixin
+  element: Water
+  category: Status
+  target: self
+  power: 0
+  accuracy: 100
+  rage: 15
+  sureHit: false
+  ignoreShield: false
+  effect:
+    - effect_skill_add_mark_mianyibuliang
+  tags: []
