--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -212,32 +212,35 @@
           - type: divide
             arg: 8
 - id: effect_mark_reduce_accuracy_10
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: accuracy
-    percent: -10
+      base: self
+    stat: accuracy
+    modifierType: percent
+    value: 0.9
 - id: effect_mark_decrease_atk
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: atk
-    percent: -25
+      base: self
+    stat: atk
+    modifierType: percent
+    value: 0.75
 - id: effect_mark_decrease_spa
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: spa
-    percent: -25
+      base: self
+    stat: spa
+    modifierType: percent
+    value: 0.75
 - id: effect_mark_decrease_heal
   trigger: OnHeal
   priority: 0
@@ -286,14 +289,15 @@
           - type: multiply
             arg: 10
 - id: effect_mark_reduce_accuracy_50
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: accuracy
-    percent: -50
+      base: self
+    stat: accuracy
+    modifierType: percent
+    value: 0.5
 - id: effect_mark_absorb_hp_to_foe
   trigger: TurnEnd
   condition:
@@ -349,14 +353,15 @@
           - type: multiply
             arg: 10
 - id: effect_mark_reduce_speed_ruodian
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: spe
-    delta:
+      base: self
+    stat: spe
+    modifierType: delta
+    value:
       type: dynamic
       selector:
         base: selfMarks
@@ -374,7 +379,6 @@
               arg: stack
           - type: multiply
             arg: -25
-    percent: 0
 - id: effect_mark_increase_damage_taken
   trigger: OnBeforeCalculateDamage
   condition:
@@ -490,14 +494,15 @@
           value: skill_yanggong
   consumesStacks: 1
 - id: effect_mark_reduce_accuracy_15
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: accuracy
-    percent: -15
+      base: self
+    stat: accuracy
+    modifierType: percent
+    value: 0.85
 - id: effect_mark_amplify_next_damage_skill_power
   trigger: AfterUseSkillCheck
   priority: 0
@@ -597,14 +602,15 @@
   condition:
     type: selfUseSkill
 - id: effect_mark_increase_accuracy_stack
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: accuracy
-    percent:
+      base: self
+    stat: accuracy
+    modifierType: delta
+    value:
       type: dynamic
       selector:
         base: mark
@@ -659,14 +665,15 @@
               arg: damageResult
   consumesStacks: 1
 - id: effect_mark_reduce_accuracy_stack
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: accuracy
-    percent:
+      base: self
+    stat: accuracy
+    modifierType: delta
+    value:
       type: dynamic
       selector:
         base: mark
@@ -675,6 +682,8 @@
             arg:
               type: base
               arg: stack
+          - type: multiply
+            arg: -1
 - id: effect_mark_bizhong
   trigger: BeforeUseSkillCheck
   priority: 0
@@ -817,14 +826,15 @@
             arg: -1
     delta: 0
 - id: effect_mark_add_weight_stack_x50
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
-    target: updateStatContext
-    statType: weight
-    percent: 0
-    delta:
+    type: addAttributeModifier
+    target:
+      base: self
+    stat: weight
+    modifierType: delta
+    value:
       type: dynamic
       selector:
         base: mark
@@ -1026,15 +1036,15 @@
           type: contain
           tag: status
 - id: effect_mark_reduce_speed_50
-  trigger: OnUpdateStat
+  trigger: OnMarkCreated
   priority: 0
   apply:
-    type: modifyStat
+    type: addAttributeModifier
     target:
-      base: updateStatContext
-    statType: spe
-    delta: 50
-    percent: 0
+      base: self
+    stat: spe
+    modifierType: delta
+    value: -50
 - id: effect_mark_amplify_next_physical_damage_with_stack
   trigger: OnBeforeCalculateDamage
   condition:
