--- a/packages/battle/package.json
+++ b/packages/battle/package.json
@@ -26,6 +26,7 @@
     "jsondiffpatch": "^0.7.3",
     "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
-    "prando": "^6.0.1"
+    "prando": "^6.0.1",
+    "rxjs": "^7.8.2"
   }
 }
