--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -28,6 +28,7 @@
     "@arcadia-eternity/effect-builder": "workspace:^",
     "@arcadia-eternity/schema": "workspace:^",
     "nanoid": "^5.1.5",
+    "rxjs": "^7.8.2",
     "zod": "^3.24.4"
   }
 }
